[refactor] jwtUtil utf-8 변경  #1